--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+##############################
+## Java
+##############################
 .mtj.tmp/
 *.class
 *.jar
@@ -5,17 +8,34 @@
 *.ear
 *.nar
 hs_err_pid*
-.settings/
-bin/
-tmp/
-.metadata
-.classpath
-.project
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.loadpath
-.factorypath
-*.fxbuild
+
+##############################
+## Maven
+##############################
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+pom.xml.bak
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+##############################
+## IntelliJ
+##############################
+out/
+.idea/
+.idea_modules/
+*.iml
+*.ipr
+*.iws
+
+
+##############################
+## OS X
+##############################
+.DS_Store
